...
                android:elevation="10dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/event_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/base_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
                android:fontFamily="@font/poppins_light"
                android:maxLines="1"
                android:text="@string/this_address"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/c_time"
                app:layout_constraintEnd_toStartOf="@id/btn_follow"
                app:layout_constraintStart_toEndOf="@id/c_time"
                app:layout_constraintTop_toBottomOf="@id/dark_text_background">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/header_ticket_type"
                    android:layout_width="wrap_content"
...
                android:layout_height="0dp"
                android:background="#21242C"
                android:fontFamily="@font/poppins_semi_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:gravity="center"
                android:text="@string/follow_nhost"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:cornerRadius="0dp"
                app:layout_constraintBottom_toBottomOf="@id/c_ticket_type"
                app:layout_constraintEnd_toEndOf="parent"
...
                android:layout_marginEnd="16dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/read_more"
                android:textAllCaps="false"
                android:textSize="8sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_attend"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_event_details" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_attend"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:text="@string/attend"
                android:textAllCaps="false"
                android:textColor="#21242C"
                app:layout_constraintTop_toBottomOf="@+id/btn_read_more"
                app:strokeColor="#FF6768" />

            <com.google.android.material.button.MaterialButton
...
