...
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    tools:context=".view.SearchResultFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/result_back_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins_medium"
        android:padding="0dp"
...
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/result_back_button"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_searched_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:layout_marginStart="6dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/txt_searched"
...
